@@ -5,7 +5,7 @@ Bonobo/bonobo11	Gene/Bonobo/panPan2_genes.gff3.gz	null	null	null	Ont/Bonobo/bono
 Bonobo/bonobo2	Gene/Bonobo/panPan3_genes.gff3.gz	null	null	null	Ont/Bonobo/bonobo2/*.gff3*	data_bonobo2	Bonobo	Mhudiblu_PPA_v0
 Dog/dog31	Gene/Dog/canFam3_genes.gff3.gz	null	null	null	Ont/Dog/dog31/*.gff3*	data_dog3_1	Dog	dog3.1
 Squirrel/squirrel20	Gene/Squirrel/speTri2_genes.gff3.gz	null	null	null	Ont/Squirrel/squirrel20/*.gff3*	data_squirrel2_0	Squirrel	SpeTri2.0
-Rat/rn7_2	Gene/Rat/mRatBN7_genes.gff3.gz	null	Marker/Rat/rn7_markers.gff3*	null	Ont/Rat/rat72/*.gff3*	data_rn7_2	Rat	mRatBN7.2
+Rat/rn7_2	Gene/Rat/mRatBN7_genes.gff3.gz	Qtl/Rat/rat72/Rat_RGDQTLS.gff3*	Marker/Rat/rn7_markers.gff3*	Strain/Rat/rat72/Rat*Strains_RGD.gff3*	Ont/Rat/rat72/*.gff3*	data_rn7_2	Rat	mRatBN7.2
 Rat/rn6	Gene/Rat/rn6_genes.gff3.gz	Qtl/Rat/rat60/Rat_RGDQTLS.gff3*	Marker/Rat/rn6_markers.gff3*	Strain/Rat/rat60/Rat*Strains_RGD.gff3*	Ont/Rat/rat60/*.gff3*	data_rgd6	Rat	rn6
 Rat/rn5	Gene/Rat/rn5_genes.gff3.gz	Qtl/Rat/rat50/Rat_RGDQTLS.gff3*	Marker/Rat/rn5_markers.gff3*	Strain/Rat/rat50/Rat*Strains_RGD.gff3*	Ont/Rat/rat50/*.gff3*	data_rgd5	Rat	rn5
 Rat/rn3_4	Gene/Rat/rn4_genes.gff3.gz	Qtl/Rat/rat34/Rat_RGDQTLS.gff3*	Marker/Rat/rn3.4_markers.gff3*	Strain/Rat/rat34/Rat*Strains_RGD.gff3*	Ont/Rat/rat34/*.gff3*	data_rgd3_4	Rat	rn3.4
